@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Removed `NaN` values for strike and dip when exporting griddedRuptures
   * Fixed `oq reset` to work in multi-user mode
   * Extended the source_id-filtering feature in the job.ini to multiple sources
   * Supported .wkt files for the binary perils in the multi_risk calculator
